--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:GollumJS/gollumts-annotation.git"
+    "url": "https://github.com/GollumJS/GollumTS-Annotation-transitional-package.git"
   },
   "keywords": [
     "simple",
@@ -27,7 +27,7 @@
   "bugs": {
     "url": "https://github.com/GollumJS/gollumts-annotation/issues"
   },
-  "homepage": "https://github.com/GollumJS/gollumts-annotation/blob/master/README.md",
+  "homepage": "https://github.com/GollumJS/GollumTS-Annotation-transitional-package/blob/master/README.md",
   "dependencies": {
     "@gollum-ts/annotation": "^5.1.0"
   },
